# Modal-Image

./: CMakeLists.txt  gregorianReader.cpp  lineDetector.cpp  lineDetector.h  segmentation.cpp  segmentation.h  test.cpp  test.h
